// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultipleRadio /> should render correctly 1`] = `
<div
  aria-labelledby="label-1"
  className="form-group form-fields"
  id="1"
  role="radiogroup"
>
  <Help
    className="help-block"
    typeForm="default"
  >
    Ceci est un texte d'aide
  </Help>
  <Description
    typeForm="default"
  >
    Ceci est une description
  </Description>
  <MultipleRadiostyle__ItemMultipleRadioContainer
    key="choice-1"
  >
    <Radio
      checked={false}
      disabled={false}
      id="1_choice-1"
      image=""
      label="Pomme"
      name="choices-for-field-123"
      onBlur={[Function]}
      onChange={[Function]}
      typeForm="default"
      value="Pomme"
    />
  </MultipleRadiostyle__ItemMultipleRadioContainer>
  <MultipleRadiostyle__ItemMultipleRadioContainer
    key="choice-2"
  >
    <Radio
      checked={false}
      disabled={false}
      id="1_choice-2"
      image=""
      label="Poire"
      name="choices-for-field-123"
      onBlur={[Function]}
      onChange={[Function]}
      typeForm="default"
      value="Poire"
    />
  </MultipleRadiostyle__ItemMultipleRadioContainer>
</div>
`;

exports[`<MultipleRadio /> should render correctly when disabled 1`] = `
<div
  aria-labelledby="label-1"
  className="form-group form-fields"
  id="1"
  role="radiogroup"
>
  <Help
    className="help-block"
    typeForm="default"
  >
    Ceci est un texte d'aide
  </Help>
  <Description
    typeForm="default"
  >
    Ceci est une description
  </Description>
  <MultipleRadiostyle__ItemMultipleRadioContainer
    key="choice-1"
  >
    <Radio
      checked={false}
      disabled={true}
      id="1_choice-1"
      image=""
      label="Pomme"
      name="choices-for-field-123"
      onBlur={[Function]}
      onChange={[Function]}
      typeForm="default"
      value="Pomme"
    />
  </MultipleRadiostyle__ItemMultipleRadioContainer>
  <MultipleRadiostyle__ItemMultipleRadioContainer
    key="choice-2"
  >
    <Radio
      checked={false}
      disabled={true}
      id="1_choice-2"
      image=""
      label="Poire"
      name="choices-for-field-123"
      onBlur={[Function]}
      onChange={[Function]}
      typeForm="default"
      value="Poire"
    />
  </MultipleRadiostyle__ItemMultipleRadioContainer>
</div>
`;

exports[`<MultipleRadio /> should render correctly when in questionnaire form 1`] = `
<div
  aria-labelledby="label-1"
  className="form-group form-fields"
  id="1"
  role="radiogroup"
>
  <Help
    className="help-block"
    typeForm="questionnaire"
  >
    Ceci est un texte d'aide
  </Help>
  <Description
    typeForm="questionnaire"
  >
    Ceci est une description
  </Description>
  <MultipleRadiostyle__ItemMultipleRadioContainer
    key="choice-1"
  >
    <Radio
      checked={false}
      disabled={false}
      id="1_choice-1"
      image=""
      label="Pomme"
      name="choices-for-field-123"
      onBlur={[Function]}
      onChange={[Function]}
      typeForm="questionnaire"
      value="Pomme"
    />
  </MultipleRadiostyle__ItemMultipleRadioContainer>
  <MultipleRadiostyle__ItemMultipleRadioContainer
    key="choice-2"
  >
    <Radio
      checked={false}
      disabled={false}
      id="1_choice-2"
      image=""
      label="Poire"
      name="choices-for-field-123"
      onBlur={[Function]}
      onChange={[Function]}
      typeForm="questionnaire"
      value="Poire"
    />
  </MultipleRadiostyle__ItemMultipleRadioContainer>
</div>
`;
